# 132

./: .gitignore  README.md  data.parquet  data_loader.py  pyproject.toml  write_to_db.py
.ipynb_checkpoints/: EDA-checkpoint.ipynb
api_example/: README.md  api_reader.py  quotes.csv
notebooks/: EDA.ipynb  README.md
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb
