[project]
name = "132"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey",email = "fkdkfkdf@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "wget (>=3.2,<4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
